# visitor

./: CMakeLists.txt
src/: CMakeLists.txt  main.cpp  visitor.cpp  visitor.h
src/core/: common.h  core.h  operations.cpp  operations.h  pane.h
src/filesystem/: filesystem.h  ifilesystem.h
src/ui/: pane.cpp  pane.h  tui.cpp  tui.h
src/view/: iview.h  tui.cpp  tui.h
tests/: CMakeLists.txt
